--- a/filter_data.ipynb
+++ b/filter_data.ipynb
@@ -10,7 +10,13 @@
     "3. Select only root comments\n",
     "4. Filter out NaN\n",
     "\n",
-    "Overall, reduce the amount of data."
+    "Overall, reduce the amount of data.\n",
+    "\n",
+    "Use preprocessed file\n",
+    "- /mnt/data/group07/johannes/proc_data/merged_comments.csv\n",
+    "\n",
+    "for generating\n",
+    "- /mnt/data/group07/johannes/proc_data/{category}_comments.csv"
    ]
   },
   {
@@ -56,7 +62,9 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -474,7 +482,7 @@
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -630,7 +638,9 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -2427,7 +2437,9 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3218,7 +3230,9 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4009,7 +4023,9 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -4883,7 +4899,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
