--- a/merge_comments_and_tokenized_text.ipynb
+++ b/merge_comments_and_tokenized_text.ipynb
@@ -5,7 +5,14 @@
    "metadata": {},
    "source": [
     "# Merge Comments and Tokenized Text\n",
-    "The tokenized version only exists as text file. So first we have to merge them together."
+    "The tokenized version only exists as text file. So first we have to merge them together.\n",
+    "\n",
+    "Merges\n",
+    "- /mnt/data/datasets/newspapers/guardian/comments.csv\n",
+    "- /mnt/data/datasets/newspapers/guardian/sorted_comments_twokenized_lower\n",
+    "\n",
+    "into\n",
+    "- /mnt/data/group07/johannes/proc_data/merged_comments.csv"
    ]
   },
   {
@@ -45,7 +52,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -3773,7 +3782,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
