--- a/score_and_class_data.ipynb
+++ b/score_and_class_data.ipynb
@@ -1,6 +1,20 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Apply extracted features and filter\n",
+    "\n",
+    "Uses\n",
+    "- /mnt/data/group07/johannes/proc_data/politics_comments.csv\n",
+    "\n",
+    "For generating\n",
+    "- /mnt/data/group07/johannes/proc_data/classes_politics_comments_{top_bot_perc}.csv [top_bot_perc=1.0]\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
@@ -23,7 +37,9 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -10850,7 +10866,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
