--- a/splitting_train_val_test.ipynb
+++ b/splitting_train_val_test.ipynb
@@ -1,6 +1,23 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Split data 80-10-10\n",
+    "\n",
+    "and store it in seperate csv files. Data is not shuffled.\n",
+    "\n",
+    "Uses\n",
+    "- /mnt/data/group07/johannes/proc_data/classes_{category}_comments_{p}.csv\n",
+    "\n",
+    "to generate\n",
+    "- /mnt/data/group07/johannes/exp_data/{category}_{p}/train.csv\n",
+    "- /mnt/data/group07/johannes/exp_data/{category}_{p}/val.csv\n",
+    "- /mnt/data/group07/johannes/exp_data/{category}_{p}/test.csv"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -68,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.4"
   }
  },
  "nbformat": 4,
