--- a/3.0-splitting-train-val-test.ipynb
+++ b/3.0-splitting-train-val-test.ipynb
@@ -9,7 +9,7 @@
     "and store it in seperate csv files. Data is not shuffled.\n",
     "\n",
     "Uses\n",
-    "- /mnt/data/group07/johannes/proc_data/classes_{category}_comments_{p}.csv\n",
+    "- /mnt/data/group07/johannes/proc_data/classes_{category}\\_comments_{p}.csv\n",
     "\n",
     "to generate\n",
     "- /mnt/data/group07/johannes/exp_data/{category}_{p}/train.csv\n",
@@ -85,7 +85,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
