Add proprocessing to one python file and clean up, commit new notebook versions

--- a/4.0-splitting-train-val-test.ipynb
+++ b/4.0-splitting-train-val-test.ipynb
@@ -19,7 +19,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -30,29 +30,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(17088, 14) (2136, 14) (2136, 14)\n",
-      "(85440, 14) (10680, 14) (10680, 14)\n",
-      "(170876, 14) (21360, 14) (21360, 14)\n"
+      "(42720, 14) (5340, 14) (5340, 14)\n",
+      "(85440, 14) (10680, 14) (10680, 14)\n"
      ]
     }
    ],
    "source": [
-    "perc = [\"0.1\", \"0.5\", \"1.0\"]\n",
+    "# perc = [\"0.1\", \"0.5\", \"1.0\"]\n",
+    "perc = [\"0.25\", \"0.5\"]\n",
     "category = \"politics\"\n",
+    "suffix = \"_fixed\" # =\"\"\n",
     "\n",
     "for p in perc:\n",
-    "    outdir = '/mnt/data/group07/johannes/exp_data/' + category + \"_\" + str(p)\n",
+    "    outdir = '/mnt/data/group07/johannes/exp_data/' + category + \"_\" + str(p) + suffix\n",
     "    if not os.path.exists(outdir):\n",
     "        os.mkdir(outdir)\n",
     "        \n",
-    "    df = pd.read_csv(\"/mnt/data/group07/johannes/proc_data/classes_\" + category + \"_comments_\" + p + \".csv\")\n",
+    "    df = pd.read_csv(\"/mnt/data/group07/johannes/proc_data/classes_\" + category + \"_comments_\" + p + suffix + \".csv\")\n",
     "    train, rest = train_test_split(df, test_size=0.2) # first train: 0.8\n",
     "    val, test = train_test_split(rest, test_size=0.5) # then, val: 0.1, test: 0.1\n",
     "    print(train.shape, val.shape, test.shape)\n",
